tests/ui/diagnostic_namespace/on_const/it_works_foreign.stderr
error[E0277]: their message
  --> $DIR/it_works_foreign.rs:10:5
   |
LL |     x == x;
   |     ^^^^^^
   |
  ::: $DIR/auxiliary/non_const_impl.rs:11:1
   |
LL | impl PartialEq for X {
   | -------------------- their label
   |
note: trait `PartialEq` is implemented but not `const`
  --> $DIR/auxiliary/non_const_impl.rs:11:1
   |
LL | impl PartialEq for X {
   | ^^^^^^^^^^^^^^^^^^^^
   = note: their note
   = note: their other note

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
